@@ -1,5 +1,12 @@
 2018-01-24  Alex Christensen  <achristensen@webkit.org>
 
+        Fix Windows build after r227552
+        https://bugs.webkit.org/show_bug.cgi?id=182026
+
+        * pal/spi/cg/CoreGraphicsSPI.h:
+
+2018-01-24  Alex Christensen  <achristensen@webkit.org>
+
         Remove pre-Sierra-OS-specific code in WebCore
         https://bugs.webkit.org/show_bug.cgi?id=182026
 
